livestockmanagement/manifests/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livestock
  labels:
    app: livestock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: livestock
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: livestock
    spec:
      containers:
        - name: livestock
          image: bisry/earlyvet-livestock
          ports:
            - containerPort: 5002
