livestockmanagement/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livestock
spec:
  selector:
    app: livestock
  type: ClusterIP
  ports:
    - port: 5002
      targetPort: 5002
      protocol: TCP
